--- a/02-python-essentials/02.06-lists.ipynb
+++ b/02-python-essentials/02.06-lists.ipynb
@@ -327,13 +327,13 @@
     {
      "ename": "TypeError",
      "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-10-844622ced67a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"hello world\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# 把开头的 h 改成大写\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'H'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -507,13 +507,13 @@
     {
      "ename": "ValueError",
      "evalue": "attempt to assign sequence of size 0 to extended slice of size 3",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-16-7b6c4e43a9fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m: attempt to assign sequence of size 0 to extended slice of size 3"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -849,13 +849,13 @@
     {
      "ename": "ValueError",
      "evalue": "1 is not in list",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-26-ed16592c2786>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m: 1 is not in list"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -1184,25 +1184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6]\n",
-      "[6, 5, 4, 3, 2, 1]\n"
+      "[1, 2, 3, 4, 5, 6]\n[6, 5, 4, 3, 2, 1]\n"
      ]
     }
    ],
    "source": [
     "a = [1, 2, 3, 4, 5, 6]\n",
     "b = a[::-1]\n",
-    "print a\n",
-    "print b"
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -1214,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1222,6 +1221,43 @@
    "source": [
     "a.sort?"
    ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 4,
+   "source": [
+    "列表的切片与步长:\n",
+    "python中提供两种索引：从左向右 0 ..... index-1   从右向左 -1 .... -index; \n",
+    "  若  step > 0, 则表示从左向右进行切片。此时，start必须小于end才有结果，否则为空。例如: s[0,: 5: 2]的结果是'ace'\n",
+    "  若  step < 0, 则表示从右向左进行切片。 此时，start必须大于end才有结果，否则为空。列如: s[5: 0: -1]的结果是'fedcb'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "b = a[::-1]  \n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
